Fixed up styling related to the Super Admin Menu. It was drawing a horizontal scroll bar when one wasn't requried

--- a/html/ui/style_template/default.css
+++ b/html/ui/style_template/default.css
@@ -818,9 +818,7 @@ div#BreadCrumbMenu
 
 div#MenuItem
 {
-	height:			75px;
-	margin-left:	20px;
-	width:			100%;
+	height:	6em;
 }
 
 .MenuItemIcon
